--- a/selectors.css
+++ b/selectors.css
@@ -8,7 +8,7 @@ a[href*="broken"] {
     border: 2px solid red;
 }
 a[href$=".com"] {
-    padding-left: 50px;
+    margin-left: 50px;
 }
 a[lang|=en] {
     font-size: 10px;
