--- a/selectors.css
+++ b/selectors.css
@@ -5,7 +5,7 @@ a[target="_blank"] {
     border: 2px solid black;
 }
 a[href*="broken"] {
-    border: 2px solid red;
+    border: 2px solid black;
 }
 a[href$=".com"] {
     margin-left: 50px;
