--- a/selectors.css
+++ b/selectors.css
@@ -1,11 +1,13 @@
 li {
     margin-bottom: 16px;
 }
-a[target="_blank"] {
+
+a[target~="_blank"]{
     border: 2px solid black;
 }
-a[href*="broken"] {
-    border: 2px solid black;
+
+a[href~="broken"]{
+    border: 2px solid red;
 }
 a[href$=".com"] {
     margin-left: 50px;
