--- a/selectors.css
+++ b/selectors.css
@@ -1,25 +1,23 @@
-
-img[alt~="Pollution"]{
-    border: 5px dashed red;
+li {
+    margin-bottom: 16px;
 }
+ ol li {
+     background-color: green;
+     color: white;
+ }
+ ul li {
+     background-color: orange;
+     color: white;
+ }
 
-img[src$=".jpg"] {
-    margin-left: 50px;
-}
-
-li[data-description~="even"]{
-    background-color: gray;
-}
-
-li[data-description*="even"]{
+ li[data-description*="even"]{
     font-size: 24px;
 }
-
-a[href^="https://"]{
-    color:green;
+#special + li {
+    border: 3px solid red;
+}
+#special ~ li {
+    margin-left: 16px;
 }
 
-span[lang|="en"] {
-    font-size: 28px;
-}
 
