--- a/selectors.css
+++ b/selectors.css
@@ -13,7 +13,7 @@ li {
  li[data-description*="even"]{
     font-size: 24px;
 }
-#special + li {
+#special + li span{
     border: 3px solid red;
 }
 #special ~ li {
