--- a/selectors.css
+++ b/selectors.css
@@ -1,4 +1,4 @@
-.already-learned ul  li {
+.already-learned   li {
     background-color: green;
     color: white;
 }
@@ -13,9 +13,14 @@
     background-color: green;
 }
 
+#special1+li code {
+    border:2px solid blue;
+}
 
-/*
-
+#special2~li{
+    font-size: 24px;
+} 
+/*!
 li {
     margin-bottom: 16px;
 }
